results/SVCOMP/specgen/log-URLDecoder01-2024_03_07_17_12_57.txt
public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s1; s1.equals("some-url+" + arg) && (\exists String s2; s2.equals(java.net.URLDecoder.decode(s1, "UTF-8")) && s2.startsWith("some")));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:1: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications cannot be directly added to the source code file. 
// You can copy the specifications provided below and add them to a separate JML file.

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s1; s1.equals("some-url+" + arg) && (\exists String s2; s2.equals(java.net.URLDecoder.decode(s1, "UTF-8")) && s2.startsWith("some")));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:4: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications for class Main

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s1; s1.equals("some-url+" + arg) && (\exists String s2; s2.equals(java.net.URLDecoder.decode(s1, "UTF-8")) && s2.startsWith("some")));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:3: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications for class Main

// This is a JML specification and needs to be added to a separate JML file named Main.jml

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s1; s1.equals("some-url+" + arg) && (\exists String s2; s2.equals(java.net.URLDecoder.decode(s1, "UTF-8")) && s2.startsWith("some")));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:5: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications for class Main

// This is a JML specification and needs to be added to a separate JML file named Main.jml

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s1; s1.equals("some-url+" + arg) && (\exists String s2; s2.equals(java.net.URLDecoder.decode(s1, "UTF-8")) && s2.startsWith("some")));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:5: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications for class Main

// This is a JML specification and needs to be added to a separate JML file named Main.jml

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s1; s1.equals("some-url+" + arg) && (\exists String s2; s2.equals(java.net.URLDecoder.decode(s1, "UTF-8")) && s2.startsWith("some")));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:5: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications for class Main

// This is a JML specification and needs to be added to a separate JML file named Main.jml

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s1; s1.equals("some-url+" + arg) && (\exists String s2; s2.equals(java.net.URLDecoder.decode(s1, "UTF-8")) && s2.startsWith("some")));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:5: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications for class Main

// This is a JML specification and needs to be added to a separate JML file named Main.jml

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s1; s1.equals("some-url+" + arg) && (\exists String s2; s2.equals(java.net.URLDecoder.decode(s1, "UTF-8")) && s2.startsWith("some")));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:5: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications for class Main

// This is a JML specification and needs to be added to a separate JML file named Main.jml

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s1; s1.equals("some-url+" + arg) && (\exists String s2; s2.equals(java.net.URLDecoder.decode(s1, "UTF-8")) && s2.startsWith("some")));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:5: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications for class Main

// This is a JML specification and needs to be added to a separate JML file named Main.jml

public class Main {
    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s1; s1.equals("some-url+" + arg) && (\exists String s2; s2.equals(java.net.URLDecoder.decode(s1, "UTF-8")) && s2.startsWith("some")));
    public static boolean f(String arg) {
        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:5: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

